--- a/EFC2.0/Pages/Index.cshtml
+++ b/EFC2.0/Pages/Index.cshtml
@@ -51,7 +51,7 @@
                                 <form novalidate="" class="ng-dirty ng-touched ng-valid">
 
                                     <div class="text-center">
-                                    <img src="~/images/efc_o_new.png" style="height: 60px;width: 192px;" alt="EFCHR" class="logo"></div>
+                                    <img src="~/images/efclogo.png" alt="EFCHR" class="logo"></div>
                                     <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">EFC Login</p>
                                     </div>
@@ -147,7 +147,7 @@
                             <div>
                                 <form  novalidate="" class="ng-untouched ng-pristine ng-invalid">
                                     <div  class="text-center">
-                                        <img src="~/images/efc_o_new.png" alt="EFCHR" class="logo">
+                                        <img src="~/images/efclogo.png" alt="EFCHR" class="logo">
                                     </div>
                                     <div  class="text-center rd-mt-2">
                                         <p  class="rd-text-primary login">Sign In - OTP</p>
@@ -202,7 +202,7 @@
                             <div>
                                 <form novalidate="" class="ng-pristine ng-invalid ng-touched">
                                     <div class="text-center">
-                                    <img src="~/images/efc_o_new.png" alt="EFCHR" class="logo"></div>
+                                    <img src="~/images/efclogo.png" alt="EFCHR" class="logo"></div>
                                     <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">Reset Password</p>
                                     </div>
