--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -112,7 +112,7 @@
                                                 </div>
                                                 <div class="static">
                                                     <div class="d-flex flex-column justify-content-center align-items-center h-100">
-                                                        <div id="chartContainer" style="height: 300px; width: 100%;"></div>       
+                                                        <div id="chartContainer" style="height: 250px; width: 100%;"></div>       
                                                     </div>
                                                 </div>
                                             </div>
@@ -277,7 +277,7 @@
             breakpoint: 480,
             options: {
                 chart: {
-                    width: 200
+                    width: "100%"
                 },
                 legend: {
                     position: 'bottom'
