--- a/EFC2.0/Pages/Index.cshtml
+++ b/EFC2.0/Pages/Index.cshtml
@@ -52,9 +52,9 @@
 
                                     <div class="text-center">
                                     <img src="~/images/efclogo.png" alt="EFCHR" class="logo"></div>
-                                    <div class="text-center rd-mt-2">
+                                    @* <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">EFC Login</p>
-                                    </div>
+                                    </div> *@
                                     <p class="login-description fw-light rd-mt-1 text-center">Welcome back! Please login to your EFC account </p>
                                     <div class="icon_wrap icon_wrap_in">
                                         <mat-form-field class="mat-form-field example-full-width my-1 ng-tns-c111-5 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-has-label ng-star-inserted mat-form-field-autofilled ng-dirty ng-valid ng-touched">
