--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -111,8 +111,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="static">
-                                                    <div class="d-flex flex-column justify-content-center align-items-center h-100">
-                                                        <div id="chartContainer" style="height: 250px; width: 100%;"></div>       
+                                                    <div class="d-flex flex-column justify-content-center align-items-center">
+                                                        <div id="chartContainer"></div>       
                                                     </div>
                                                 </div>
                                             </div>
