--- a/EFC2.0/wwwroot/css/dashboard.css
+++ b/EFC2.0/wwwroot/css/dashboard.css
@@ -285,10 +285,10 @@
 }
 
 .apply-button {
-    color: #005eeb;
-    font-size: 14px;
+    color: #ff823e;
+    font-size: 12px;
     font-weight: 500;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .task-wrap {
@@ -869,4 +869,12 @@ a.canvasjs-chart-credit {
     .mat-tab-label {
         min-width: 72px
     }
+}
+table.table {
+    margin: 0;
+}
+.table thead tr th, .table tbody tr td {
+    font-size: 11px;
+    color: #000;
+    padding: 5px;
 }
