--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -44,10 +44,7 @@
                                     </div>
                                 </div>
                                 <button type="button" class="rd-btn-primary-sm home-login-btn rd-mt-2 ng-star-inserted"> Check In </button>
-                             
-                            </div>
-                            <div class="card-wrapper-bg mt-3">
-                                <div class="leave-bg">
+                                <div class="leave-bg mt-3">
                                     <div class="d-flex justify-content-between rd-mb-1">
                                         <div class="rd-home-headings1">Leave Balance</div>
                                         <div routerlink="/self-service-all/attendance/leaves/leave-history/apply-leave/0" class="apply-button" tabindex="0">Apply For Leave</div>
@@ -66,6 +63,58 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="leave-bg mt-3">
+                                    <div class="d-flex justify-content-between rd-mb-1">
+                                        <div class="rd-home-headings1">Help Desk</div>
+                                        <div routerlink="/self-service-all/attendance/leaves/leave-history/apply-leave/0" class="apply-button" tabindex="0">Create Ticket</div>
+                                    </div>
+
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>
+                                                    Sr. No.
+                                                </th>
+                                                <th>
+                                                    Ticket
+                                                </th>
+                                                <th>
+                                                    Status
+                                                </th>
+
+                                            </tr>
+                                        </thead>
+
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    1
+                                                </td>
+
+                                                <td>
+                                                   This is for test
+                                                </td>
+
+                                                <td>
+                                                    Open
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    2
+                                                </td>
+
+                                                <td>
+                                                    This is for test
+                                                </td>
+
+                                                <td>
+                                                    Open
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +194,7 @@
                         </div>
                         <div class="row rd-mt-2">
                             <div class="col-md-6">
-                                <div class="events-wrap">
+                                <div class="events-wrap heightWrap">
                                     <div class="d-flex justify-content-between rd-mb-1">
                                         <div class="rd-home-headings1">Events</div>
                                         <div class="apply-button">View All</div>
@@ -207,7 +256,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6" style="padding-left: 0px;">
-                                <div class="holi-bg">
+                                <div class="holi-bg heightWrap">
                                     <div class="d-flex justify-content-between rd-mb-1">
                                         <div class="rd-home-headings1">Holidays of 2025</div>
                                         <div class="apply-button">View All</div>
