--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -8,8 +8,7 @@
         <div class="container-fluid px-0 main-content-page h-100">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4 card-bg-white fixed-column he-100">
-                        <div>
+                    <div class="col-md-4 card-bg-white fixed-column">
                             <div class="card-wrapper-bg">
                                 <div class="wrapper-1 d-flex align-items-center mb-4">
                                     <div><img src="~/images/sun.svg" alt=""></div>
@@ -117,7 +116,6 @@
                                     </table>
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <div class="col-md-8 card-bg-grey scrollable-column">
                         <div class="d-flex align-items-center justify-content-between tab-padding-grey-card">
@@ -148,7 +146,6 @@
                             <div class="col-md-6" style="padding-left: 0px;">
                                 <div class="card-announce tab-chart-bottom">
                                     <div class="topcard topheigh">
-                                        <div>
                                             <div class="rd-card-home h-100">
                                                 <div>
                                                     <div class="d-flex justify-content-between rd-mb-2">
@@ -179,7 +176,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
