--- a/EFC2.0/Pages/Index.cshtml
+++ b/EFC2.0/Pages/Index.cshtml
@@ -50,7 +50,7 @@
                             <div _ngcontent-yct-c266="">
                                 <form novalidate="" class="ng-dirty ng-touched ng-valid">
 
-                                    <div class="text-center">
+                                    <div class="text-center mb-4">
                                     <img src="~/images/efclogo.png" alt="EFCHR" class="logo"></div>
                                     @* <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">EFC Login</p>
@@ -250,7 +250,7 @@
         </div>
     </div>
 </div>
-
+<partial name="Footer" />
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
