--- a/EFC2.0/Pages/Shared/Sidebar.cshtml
+++ b/EFC2.0/Pages/Shared/Sidebar.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="ng-star-inserted">
-    <nav class="left-nav navbar navbar-light nav-collapse left-nav-sticky">
+﻿<nav class="left-nav navbar navbar-light nav-collapse left-nav-sticky">
         <div id="nav-body-element" class="left-nav-body navbar-inner left-nav-fixed-top">
             <ul class="navbar-nav">
                 <li routerlinkactive="menu-1-active" routerlink="home" class="nav-item menu-1-active" tabindex="0">
@@ -621,4 +620,3 @@
             </ul>
         </div>
     </nav>
-</div>
