--- a/EFC2.0/Pages/Shared/_Layout.cshtml
+++ b/EFC2.0/Pages/Shared/_Layout.cshtml
@@ -4015,6 +4015,7 @@
             {
                 <partial name="Header" />
             }
+            <div class="main-container ng-star-inserted">
             @if (ViewData["HideSidebar"] == null || (bool)ViewData["HideSidebar"] == false)
             {
                 <partial name="Sidebar" />
@@ -4024,6 +4025,7 @@
             {
                 <partial name="Footer" />
             } *@
+            </div>
         </main>
     </div>
 
